# Monitoring_Env_WebServer_fw

Monitoring_Env_WebServer_fw/: CMakeLists.txt  sdkconfig
Monitoring_Env_WebServer_fw/data/: index.html
Monitoring_Env_WebServer_fw/main/: CMakeLists.txt  main.c
Monitoring_Env_WebServer_fw/main/SHT3x/: sht31.c  sht31.h
Monitoring_Env_WebServer_fw/main/config/: config.c  config.h
Monitoring_Env_WebServer_fw/main/connect_wifi/: CMakeLists.txt  connect_wifi.c  connect_wifi.h
Monitoring_Env_WebServer_fw/main/spiffs_web/: spiffs_web.c  spiffs_web.h
